5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1828_3178.log
== TEST (2019-06-12 14:57:53) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
for i in range(size(N), 0, -1):
	if (N[i] == 0):
		v[i] = N[i]
print(v[i])
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:01:23) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
c = -1
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i] 
	if (N[i] == 0):
		v[c] = N[i]
		c = c - 1
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:03:40) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
c = -1
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i] 
	if (N[i] == 0):
		v[c] = N[i]
		c = c - 1
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:30) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
v1 = ""
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i]
	if (N[i] == 0):
		v1 = v1 + N[i]
		
		
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:45) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
v1 = ""
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i]
	if (N[i] == 0):
		v1 = v1 + N[i]
print(v + v1)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:08:39) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
v1 = ""
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i]
	if (N[i] == 0):
		v1 = v1 + N[i]
print(v + v1)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:10:12) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
v1 = ""
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:10:20) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
v1 = ""
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:13:05) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
v1 = ""
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i]
		z = z + 1
	elif(N[i] == 0):
		c = range(z, -1)
		v[c] = v[c] + N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:13:27) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
v1 = ""
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i]
		z = z + 1
	elif(N[i] == 0):
		c = range(z, -1)
		v[c] = v[c] + N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:13:45) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
v1 = ""
z = 0
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i]
		z = z + 1
	elif(N[i] == 0):
		c = range(z, -1)
		v[c] = v[c] + N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:14:52) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
v1 = ""
z = 0
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i]
		z = z + 1
	elif(N[i] == 0):
		c = range(z, -1)
		v[z] = v[z] + N[i]
		z = z + 1
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:17:53) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
z = 0
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i]
	elif(N[i] == 0):
		v[-i] = v[-i] + N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:18:45) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
z = 0
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i]
	elif(N[i] == 0):
		I = -1
		v[I] = v[I] + N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:19:14) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
z = 0
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i]
	elif(N[i] == 0):
		I = I -1
		v[I] = v[I] + N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:19:22) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
I = 0
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = N[i]
	elif(N[i] == 0):
		I = I -1
		v[I] = v[I] + N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:20:48) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = ""
I = 0
for i in range(size(N)):
	if(N[i] != 0):
		N[i] = v
for i 
print(v)
		
		
-- ERROR:
File "XXXX", line 9
    for i 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:26:32) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
for i in range(size(N)):
	if(N[i] != 0):
		v = v + N[i]
for i in range(size(N)):
	if (N[i] == 0):
		v = v + N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:27:06) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = v[i] + N[i]
for i in range(size(N)):
	if (N[i] == 0):
		v[i] = v[i] + N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:27:46) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = v[i] + N[i]
if (N[i] == 0):
	v[i] = v[i] + N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:29:08) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
a = 0 
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = v[i] + N[i]
		a = a + 1
if (N[i] == 0):
	v[a] = v[a] + N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:29:16) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
a = 0 
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = v[i] + N[i]
		a = a + 1
if (N[i] == 0):
	v[a] = v[a] + N[i]
	a = a + 1
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:29:24) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
a = 0 
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = v[i] + N[i]
		a = a + 1
if (N[i] == 0):
	v[a] = v[a] + N[i]
	a = a + 1
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:30:59) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
a = 0 
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = v[i] + N[i]
		a = a + 1
	elif (N[i] == 0):
		v[a] = v[a] + N[i]
		a = a + 1
		print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:31:10) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
a = 0 
for i in range(size(N)):
	if(N[i] != 0):
		v[i] = v[i] + N[i]
		a = a + 1
	elif (N[i] == 0):
		v[a] = v[a] + N[i]
		a = a + 1
		print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:37:54) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
for i in range(size(N)):
	if (N[i] != 0):
		v[i] = N[i]
	elif (N[i] == 0):
		v[i] = v[-i] + N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:39:14) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
a = -1 #indice
for i in range(size(N)):
	if (N[i] != 0):
		v[i] = N[i]
	elif (N[i] == 0):
		v[a] = v[a] + N[i]
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:39:34) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
a = -1 #indice
for i in range(size(N)):
	if (N[i] != 0):
		v[i] = N[i]
	elif (N[i] == 0):
		v[a] = v[a] + N[i]
		a = a -1
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:43:35) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
a = 0 #indice
b = 0
for i in range(size(N)):
	if (N[i] != 0):
		v[ia] = N[i]
		a = a + 1
	elif (N[i] == 0):
		v[b] = v[b] + N[i]
		b = b + 1
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:43:43) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
a = 0 #indice
b = 0
for i in range(size(N)):
	if (N[i] != 0):
		v[a] = N[i]
		a = a + 1
	elif (N[i] == 0):
		v[b] = v[b] + N[i]
		b = b + 1
print(v)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:43:51) 
-- CODE:
from numpy import*
N = array(eval(input("Vetor: ")))

v = zeros(size(N), dtype=int)
a = 0 #indice
b = 0
for i in range(size(N)):
	if (N[i] != 0):
		v[a] = N[i]
		a = a + 1
	elif (N[i] == 0):
		v[b] = v[b] + N[i]
		b = b + 1
print(v)
		
		
-- EXECUTION TIME:
1.11316
-- TEST CASE 1:
---- input:
[2,3,4,0,0,0,-1]
---- correct output:
[ 2  3  4 -1  0  0  0]
---- user output:
[ 2  3  4 -1  0  0  0]
-- TEST CASE 2:
---- input:
[0,0,0,5,4,3,2]
---- correct output:
[5 4 3 2 0 0 0]
---- user output:
[5 4 3 2 0 0 0]
-- TEST CASE 3:
---- input:
[0,9,0,0,0,8,0,0,7]
---- correct output:
[9 8 7 0 0 0 0 0 0]
---- user output:
[9 8 7 0 0 0 0 0 0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
